--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>My Schedule</h1>
     <table>
-      <tr>
+      <tr class="days">
         <th>Time</th>
         <th>Sunday</th>
         <th>Monday</th>
@@ -18,56 +18,58 @@
         <th>Friday</th>
         <th>Saturday</th>
       </tr>
-      <tr>
-        <td>10 AM</td>
-        <td></td>
-        <td>Psych 101</td>
-        <td>English 200</td>
-        <td>Psych 101</td>
-        <td>English 200</td>
-        <td>Psych 101</td>
-        <td></td>
+    <tr class="tablerow1">
+     <td class="first">10 AM</td>
+        <td class="first"></td>
+        <td class="first">Psych 101</td>
+        <td class="first">English 200</td>
+        <td class="first">Psych 101</td>
+        <td class="first">English 200</td>
+        <td class="first">Psych 101</td>
+        <td class="first"></td>
       </tr>
-      <tr>
-        <td>11 AM</td>
-        <td>Brunch</td>
-        <td>CINS 110</td>
-        <td>CSCI 111</td>
-        <td>CINS 110</td>
-        <td>CSCI 111</td>
-        <td></td>
-        <td></td>
+
+    <tr class="tablerow1">
+        <td class="second">11 AM</td>
+        <td class="second">Brunch</td>
+        <td class="second">CINS 110</td>
+        <td class="second">CSCI 111</td>
+        <td class="second">CINS 110</td>
+        <td class="second">CSCI 111</td>
+        <td class="second"></td>
+        <td class="second"></td>
       </tr>
-      <tr>
-        <td>NOON</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
+      <tr class="tablerow1">
+        <td class="third">NOON</td>
+        <td class="third" >Lunch</td>
+        <td class="third"> Lunch</td>
+        <td class="third">Lunch</td>
+        <td class="third">Lunch</td>
+        <td class="third">Lunch</td>
+        <td class="third">Lunch</td>
+        <td class="third">Lunch</td>
       </tr>
-      <tr>
-        <td>1 PM</td>
-        <td></td>
-        <td>MATH 109</td>
-        <td>CINS 110 Lab</td>
-        <td>MATH 109</td>
-        <td>CINS 110 Lab</td>
-        <td>MATH 109</td>
-        <td></td>
+      <tr class="tablerow1">
+        <td class="forth">1 PM</td>
+        <td class="forth"></td>
+        <td class="forth">MATH 109</td>
+        <td class="forth">CINS 110 Lab</td>
+        <td class="forth">MATH 109</td>
+        <td class="forth">CINS 110 Lab</td>
+        <td class="forth">MATH 109</td>
+        <td class="forth"></td>
       </tr>
-      <tr>
-        <td>1 PM</td>
-        <td></td>
-        <td>CSCI 111 Lab</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+      <tr class="tablerow1">
+        <td class="fifth">1 PM</td>
+        <td class="fifth"></td>
+        <td class="fifth">CSCI 111 Lab</td>
+        <td class="fifth"></td>
+        <td class="fifth"></td>
+        <td class="fifth"></td>
+        <td class="fifth"></td>
+        <td class="fifth"></td>
       </tr>
     </table>
   </body>
+  
 </html>
